tests/ui/rfcs/rfc-2497-if-let-chains/invalid-let-in-a-valid-let-context.stderr
error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:8:19
   |
LL |         let _ = &&let Some(x) = Some(42);
   |                   ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:13:47
   |
LL |         if let Some(elem) = _opt && [1, 2, 3][let _ = &&let Some(x) = Some(42)] = 1 {
   |                                               ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:13:57
   |
LL |         if let Some(elem) = _opt && [1, 2, 3][let _ = &&let Some(x) = Some(42)] = 1 {
   |                                                         ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:13:12
   |
LL |         if let Some(elem) = _opt && [1, 2, 3][let _ = &&let Some(x) = Some(42)] = 1 {
   |            ^^^^^^^^^^^^^^^^^^^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:24:23
   |
LL |             [1, 2, 3][let _ = ()];
   |                       ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:33:47
   |
LL |         if let Some(elem) = _opt && [1, 2, 3][let _ = ()] = 1 {
   |                                               ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:33:12
   |
LL |         if let Some(elem) = _opt && [1, 2, 3][let _ = ()] = 1 {
   |            ^^^^^^^^^^^^^^^^^^^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:42:21
   |
LL |             let x = let y = 1;
   |                     ^^^

error: aborting due to 8 previous errors

